[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["Shakirov Renat <renatshk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "first_project"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
flake8 = "^5.0.4"
unicorn = "^2.0.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
